--- a/nsl_fullstack/client/package.json
+++ b/nsl_fullstack/client/package.json
@@ -12,10 +12,24 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@mediapipe/holistic": "^0.5.1675471629",
     "@mui/icons-material": "^6.1.5",
-    "@mui/material": "^6.1.5",
+    "@mui/material": "^6.1.7",
+    "@tensorflow/tfjs": "^4.22.0",
+    "axios": "^1.7.7",
+    "fps-meter": "^0.1.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-fps": "^1.0.6",
+    "react-lottie": "^1.2.7",
+    "react-router-dom": "^6.28.0",
+    "react-webcam": "^7.2.0",
+    "socket.io-client": "^4.8.1",
+    "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -32,5 +46,13 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "vite": "^5.4.1"
-  }
+  },
+
+  "jest": {
+  "roots": ["<rootDir>/src", "<rootDir>/tests"],
+  "moduleDirectories": ["node_modules", "<rootDir>/src"],
+  "setupFilesAfterEnv": ["@testing-library/jest-dom/extend-expect"],
+  "testMatch": ["<rootDir>/tests/**/*.test.js", "<rootDir>/src/**/*.test.js"]
+}
+
 }
